--- a/sphere.css
+++ b/sphere.css
@@ -4,6 +4,15 @@
   height: 350px;
 }
 
+.deactive {
+  pointer-events: none;
+}
+
+.sphere--next,
+.sphere--prev {
+  cursor: pointer;
+}
+
 .sphere--item {
   position: absolute;
   top: 0;
